@@ -2,6 +2,8 @@ package com.urise.webapp.storage;
 
 import com.urise.webapp.storage.serializer.JsonStreamSerializer;
 
+//--add-opens java.base/java.time=ALL-UNNAMED
+
 public class JsonPathStorageTest extends AbstractStorageTest {
     public JsonPathStorageTest() {
         super(new PathStorage(STORAGE_DIR.getAbsolutePath(), new JsonStreamSerializer()));
